--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
-
-*.xml
-*.iml
+/backend/.vscode/
+/backend/.idea/
+/.idea/
+/backend/emergency-room-transfer.iml
+/backend/target/
+.DS_Store
+/backend/.DS_Store
+/web/node_modules
