--- a/backend/emergency-room-transfer/src/main/resources/application.properties
+++ b/backend/emergency-room-transfer/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/ed_patient_transfer
-spring.datasource.username=root
-spring.datasource.password=Samarfde1.
+spring.datasource.username=guest
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
